force-app/main/default/objects/Freight__c/Freight__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena o custo de frete por tonelada considerando a cidade origem e a cidade destino.</description>
    
    <label>Frete</label>
    <nameField>
        <displayFormat>FRT-{0000}</displayFormat>
        <label>Nome do Frete</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fretes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>