force-app/main/default/objects/Freight__c/fields/DestinationCity__c.field-meta.xml
<CustomField>
    <fullName>DestinationCity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade Destino</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Fretes (Cidade Destino)</relationshipLabel>
    <relationshipName>DestinationFreights</relationshipName>
    <type>Lookup</type>
</CustomField>