force-app/main/default/objects/Freight__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Data de Termino</label>
    <required>true</required>
    <type>Date</type>
</CustomField>