force-app/main/default/objects/Freight__c/fields/ExternalIDIndex__c.field-meta.xml
<CustomField>
    <fullName>ExternalIDIndex__c</fullName>
    <externalId>true</externalId>
    <label>External ID Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>