force-app/main/default/objects/Freight__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Formula que verifica a maior especificidade para atribuir o grau de especificidade do registro.</description>
    <formula> IF(NOT(IsBlank(Product2Id__c)), 10, 0) + IF(NOT(IsBlank(Family__c)), 1,  0) </formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula que verifica a maior especificidade para atribuir o grau de especificidade do registro.</inlineHelpText>
    <label>Prioridade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>