force-app/main/default/objects/Freight__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fretes</relationshipLabel>
    <relationshipName>Freights</relationshipName>
    <type>Lookup</type>
</CustomField>