force-app/main/default/objects/Freight__c/fields/SourceCity__c.field-meta.xml
<CustomField>
    <fullName>SourceCity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade de Origem</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Fretes (Cidade de Origem)</relationshipLabel>
    <relationshipName>SourceFreights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>