force-app/main/default/objects/Freight__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Data de Inicio</label>
    <required>true</required>
    <type>Date</type>
</CustomField>