force-app/main/default/objects/Freight__c/fields/ValuePerTon__c.field-meta.xml
<CustomField>
    <fullName>ValuePerTon__c</fullName>
    <label>Valor por Tonelada em R$ BRL</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>