force-app/main/default/objects/Freight__c/fields/ValuePerTonDolar__c.field-meta.xml
<CustomField>
    <fullName>ValuePerTonDolar__c</fullName>
    <label>Valor por Tonelada em $ USD</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>