force-app/main/default/objects/Freight__c/validationRules/ValidateFreightWithSameKeyCity.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateFreightWithSameKeyCity</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(AND(ISCHANGED( ExternalId__c ), ISCHANGED( SourceCity__c )))</errorConditionFormula>
    <errorMessage>Código externo e cidade não podem ser iguais.</errorMessage>
</ValidationRule>