force-app/main/default/objects/Freight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId__c</columns>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>SourceCity__c</columns>
    <columns>DestinationCity__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Product2Id__c</columns>
    <columns>ValuePerTon__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>